# movingpandas

./: .gitignore  .pre-commit-config.yaml  .travis.yml  0_getting_started.Rmd  0_getting_started.ipynb  0_getting_started.md  1_ship_data_analysis.ipynb  2_bird_migration_analysis.ipynb  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  __init__.py  _config.yml  changelog.md  codecov.yml  dev-requirements.txt  environment-geopandas-1.0.yml  environment-geopandas-pre1.0.yml  environment-minimum-3.10.yml  environment-minimum-3.9.yml  environment-minimum.yml  environment.yml  examples.md  geometry_utils.py  getting_started.ipynb  overlay.py  paper.bib  paper.md  pyproject.toml  readthedocs.yml  requirements.txt  runtime.txt  setup.cfg  setup.py  test.ipynb  tox.ini  trajectory.py  (+5 more)
_layouts/: default.html
demo/: demo_read_gpkg.py  demo_sampling.py  demo_spatial_intersections.py  demodata_grid.gpkg  sampling_output.csv  sandbox.py
docs/: conf.py  environment.yml  index.rst  requirements.txt  setup.py
movingpandas/: __init__.py  cpa.py  geometry_utils.py  io.py  mobility_metrics.py  overlay.py  point_clusterer.py  setup.cfg  spatiotemporal_utils.py  time_range_utils.py  trajectory.py  trajectory_aggregator.py  trajectory_cleaner.py  trajectory_collection.py  trajectory_collection.py.4a3b06f02443cc294e1954027c85c200.tmp  trajectory_generalizer.py  trajectory_manager.py  trajectory_plotter.py  trajectory_prediction_evaluator.py  trajectory_predictor.py  trajectory_sampler.py  trajectory_smoother.py  trajectory_splitter.py  trajectory_utils.py  (+3 more)
(+122 files in other folders)
